--- a/image_center.css
+++ b/image_center.css
@@ -1,16 +1,43 @@
+body {
+  opacity: 1;
+  transition: 1s opacity;
+  box-sizing: border-box;
+}
+
+body.fade-out {
+  opacity: 0;
+  transition: none;
+}
+
 .container img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
-}
-
-.container img {
-    filter:drop-shadow(8px 8px 10px gray);
-}
-
-.container img {
+  filter:drop-shadow(8px 8px 10px gray);
   border-radius: 50px;
+  animation-duration: myMove 5s infinite;
+}
+
+@keyframes myMove {
+  0% {left: 0px;}
+  100% {right: 200px;}
+}
+
+@keyframes zoominoutsinglefeatured {
+  0% {
+      transform: scale(1,1);
+  }
+  50% {
+      transform: scale(1.2,1.2);
+  }
+  100% {
+      transform: scale(1,1);
+  }
+}
+
+.container img {
+animation: zoominoutsinglefeatured 15s forwards;
 }
 
 .container {
@@ -76,6 +103,76 @@ p:hover {
 .table th {
   background-color: blue;
   color: aliceblue;
+}
+
+
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  background-color: blue;
+  color: white;
+  padding: 16px 20px;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+  border: 2px black;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=email], .form-container input[type=telephone] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=email]:focus, .form-container input[type=telephone]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
 
 .footer p {
